2013-01-09 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/SDCC.y,
	* src/SDCCast.h,
	* src/SDCCast.c: Move the test condition of a for-loop to the end of
	  the loop if it is always true for the first iteration of the loop
	  and has no side-effects.

2013-01-09 Molnar Karoly <molnarkaroly AT users.sf.net>

	* support/scripts/mcs51-disasm.pl: Internal restructuring an bug fixes.

2013-01-08 Molnar Karoly <molnarkaroly AT users.sf.net>

	* support/scripts/mcs51-disasm.pl: Prints in table the embedded constants.

2013-01-07 Molnar Karoly <molnarkaroly AT users.sf.net>

	* support/scripts/mcs51-disasm: Renamed to mcs51-disasm.pl

2013-01-07 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/hc08/gen.c,
	* src/hc08/ralloc2.cc: Support more register combinations
	  with pointer get/set and ifx iCodes. Allow rmw instructions to
	  use X as a scratch register.
	* sim/ucsim/hc08.src/inst.cc: Fixed bug with cbeq using stack operand
	  modifying hx

2013-01-06 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c,
	  src/z80/ralloc.c:
	  Minor code cleanup.

2013-01-06 Molnar Karoly <molnarkaroly AT users.sf.net>

	* support/scripts/mcs51-disasm:
	  Changes in the commandline options:
	    Renamed --code-size to --rom-size.
	    Removed: --debug
	    New: --verbose, --const-area
	  Extracts more informations from map file.

2013-01-06 Borut Razem <borut.razem AT gmail.com>

	* src/SDCCasm.c, src/SDCCasm.h: excluded unused asm mappings

2013-01-05 Molnar Karoly <molnarkaroly AT users.sf.net>

	* support/scripts/mcs51-disasm: More informations from map file.

2013-01-05 Molnar Karoly <molnarkaroly AT users.sf.net>

	* support/scripts/mcs51-disasm: The required perl version: 5.12.0
          One repair: The unknown instruction is actually simple embedded
          data in the code.

2013-01-05 Molnar Karoly <molnarkaroly AT users.sf.net>

	* support/scripts/mcs51-disasm: New commandline option: --map-file
	  More detailed comments of instructions.
