@@ -160,8 +160,13 @@ static bool operand_is_ax(const operand *o, const assignment &a, unsigned short 
   if(oi == oi_end)
     return(false);
 
+  oi2 = oi;
+  oi2++;
+  if (oi2 == oi_end)
+    return(false);
+  
   // Register combinations code generation cannot handle yet (AX, AH, XH, HA).
-  if(a.local.find(oi->second) != a.local.end() && a.local.find((oi2 = oi, ++oi2)->second) != a.local.end())
+  if(a.local.find(oi->second) != a.local.end() && a.local.find(oi2->second) != a.local.end())
     {
       const reg_t l = a.global[oi->second];
       const reg_t h = a.global[oi2->second];
